<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.taya.hello.MainActivity">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="30dp"
            android:src="@drawable/ic_account_circle"
        />

        <TextView
            style="@style/MainStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_hello"
            android:textSize="35sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            style="@style/MainStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_thank_you" />

        <TextView
            style="@style/MainStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_log_in"
            android:layout_marginBottom="40dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <TextView
                style="@style/MainStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="5dp"
                android:gravity="left|center_vertical"
                android:text="@string/tv_sync_bookmarks"
                android:textAllCaps="true" />

            <TextView
                style="@style/MainStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="5dp"
                android:gravity="left|center_vertical"
                android:text="@string/tv_sync_password"
                android:textAllCaps="true" />

            <TextView
                style="@style/MainStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="5dp"
                android:gravity="left|center_vertical"
                android:text="@string/tv_transfer"
                android:textAllCaps="true" />

            <TextView
                style="@style/MainStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="5dp"
                android:gravity="left|center_vertical"
                android:text="@string/tv_review"
                android:textAllCaps="true" />
        </LinearLayout>

        <Button
            style="@style/MainStyle"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:background="#ff3b5998"
            android:drawableLeft="@drawable/ic_facebook"
            android:drawablePadding="10dp"
            android:gravity="center_vertical|left"
            android:paddingLeft="60dp"
            android:text="@string/bt_login_facebook" />



</LinearLayout>
